# slurmtool

./: .gitignore  Cargo.toml  README.md  pixi.toml
old/: old_main.rs  test.txt
old/slurm-scripts/: qalloc  slauncher.sh
old/src/slurmtools/: __init__.py  cli.py  enums.py  helpers.py  sacctjob_dataclass.py  sandbox.ipynb  squeuejob_dataclass.py  versions.py
old/src/slurmtools/myqueue/: myqueue.py
old/src/slurmtools/proper/: jobs_textual.py  slurm_jobs.py  slurm_nodes.py
old/src/slurmtools/proper/models/: __init__.py  base.py  scontrol_node.py  scontrol_partition.py  tres.py  utils.py
old/src/slurmtools/sandbox/: nodeinfo.py  tsqueue.py
old/src/slurmtools/subcommands/: jobhist.py
old/src/slurmtools/textual/: actions03.py  actions05.tcss  binding01.tcss  binding_playground.py  key_playground.py  mouse01.py  mouse01.tcss  textualize_playground.py  textualize_stopwatch.py
src/: lib.rs  main.rs  node.rs  partition.rs  terminal_size.rs
src/progress/: README.md  mod.rs
