[package]
name = "slurmtool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
indicatif = "0.17.9"
itertools = "0.13.0"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9" # Required for YAML serialization
termcolor = "1.4.1"
thiserror = "2.0.3"
tokio = "1.41.1"
url = "2.5.4"
uuid = "1.11.0"
